@@ -1,3 +1,7 @@
+Sun Aug 24 20:14:52 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
+	* orbsvcs/orbsvcs/Sched/Reconfig_Sched_Utils_T.cpp: Fixed compile
+	  warnings regarding usage of ace_max in Debian_Core build. 
+
 Sun Aug 24 16:54:58 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
 
 	* orbsvcs/orbsvcs/Sched/Reconfig_Sched_Utils_T.cpp: 
